# ArticleCheck

./: .dockerignore  .env.docker  .env.example  .gitignore  CLAUDE.md  DEPLOY_GUIDE.md  Dockerfile  Makefile  README.md  architecture.md  build_exe.py  deploy.sh  docker-compose.yml  install.bat  nginx.conf  pyproject.toml  requirements.txt  run.py
ArticleCheck_platform/: .dify-config.md  .dockerignore  .env.example  Dockerfile  README.md  README_PLATFORM.md  deploy.bat  nginx.conf  pyproject.toml  run.py
ArticleCheck_platform/article_check/: __main__.py  chat.py  cli.py
ArticleCheck_platform/article_check/agents/: __init__.py  base.py  dialogue.py  reporter.py  scheduler.py
ArticleCheck_platform/article_check/config/: settings.py
ArticleCheck_platform/article_check/documents/: __init__.py
ArticleCheck_platform/article_check/literature/: __init__.py  citation.py  searcher.py  survey.py  viz.py
ArticleCheck_platform/article_check/llm/client/: __init__.py  dify.py
ArticleCheck_platform/article_check/pipeline/: models.py  orchestrator.py  streaming.py  worker.py
ArticleCheck_platform/article_check/utils/: file_utils.py
ArticleCheck_platform/article_check/web/: server.py
ArticleCheck_platform/article_check/web/frontend/src/: App.jsx  (+1 more)
ArticleCheck_platform/docs/: dify-workflow-text-architecture.md
ArticleCheck_platform/knowledge/formats/: common-errors.md  docx-rules.md  latex-rules.md
ArticleCheck_platform/knowledge/references/: doi-guide.md
ArticleCheck_platform/knowledge/workflows/: chat-workflows.md
ArticleCheck_platform/项目方相关配置/: 智能体客服.yml
(+78 files in other folders)
