[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "article-check"
version = "0.1.0"
description = "学术论文审查智能体 — 基于 DeepSeek API 的格式审查与文献审查系统"
readme = "README.md"
authors = [
    {name = "ShaoPaodiao", email = "18519101256@163.com"},
]
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["academic", "paper-review", "latex", "docx", "deepseek", "ai-agent"]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
docx = ["python-docx>=1.0"]
pdf = ["pymupdf>=1.23", "pdfplumber>=0.10"]
latex = []  # chktex 需要系统安装
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "black",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/ShaoPaodiao/article-check"
Repository = "https://github.com/ShaoPaodiao/article-check.git"

[project.scripts]
article-check = "article_check.cli:main"

[tool.setuptools.packages.find]
include = ["article_check*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json", "*.md", "*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "W", "I"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
